--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -218,14 +218,14 @@
   }
 
   .call-view {
-    @apply flex sm:flex-row flex-col gap-10 items-center justify-between w-full;
+    @apply flex sm:flex-row flex-col gap-6 items-center justify-between w-full;
 
     h3 {
       @apply text-center text-primary-100 mt-5;
     }
 
     .card-interviewer {
-      @apply flex-center flex-col gap-2 p-7 h-[400px] blue-gradient-dark rounded-lg border-2 border-primary-200/50 flex-1 sm:basis-1/2 w-full;
+      @apply flex-center flex-col gap-2 p-6 h-[360px] purple-gradient-dark rounded-lg border-1 border-primary-200/20 flex-1 sm:basis-1/2 w-full;
     }
 
     .avatar {
@@ -237,11 +237,11 @@
     }
 
     .card-border {
-      @apply border-gradient p-0.5 rounded-2xl flex-1 sm:basis-1/2 w-full h-[400px] max-md:hidden;
+      @apply blue-gradient-dark border-1 rounded-lg flex-1 sm:basis-1/2 w-full h-[360px] border-primary-200/20 max-md:hidden;
     }
 
     .card-content {
-      @apply flex flex-col gap-2 justify-center items-center p-7 dark-gradient rounded-2xl min-h-full;
+      @apply flex flex-col gap-2 justify-center items-center p-6 blue-gradient-dark rounded-lg min-h-full;
     }
   }
 
@@ -315,7 +315,11 @@
 }
 
 @utility blue-gradient-dark {
-  @apply bg-gradient-to-b from-[#171532] to-[#08090D];
+  @apply bg-gradient-to-b from-[#152232] to-[#08090D];
+}
+
+@utility purple-gradient-dark {
+  @apply bg-gradient-to-b from-[#1f1532] to-[#08090D];
 }
 
 @utility blue-gradient {
